[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://PlayerAnimations.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scripts/PlayerFSM.gd" type="Script" id=3]
[ext_resource path="res://assets/lights/lightfading-export.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 13.0261 )

[node name="Player" type="KinematicBody2D"]
self_modulate = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="anim_player" type="AnimatedSprite" parent="."]
self_modulate = Color( 0.207843, 0.207843, 0.207843, 1 )
frames = ExtResource( 2 )
animation = "IdleD"
frame = 3
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 18 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="StateMachine"]
process_mode = 0
wait_time = 0.25
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.22, 0.22 )
limit_smoothed = true

[node name="light" type="Light2D" parent="."]
position = Vector2( 0, 11.4478 )
scale = Vector2( 1, 1.11375 )
texture = ExtResource( 4 )
color = Color( 0, 1, 0.415686, 0.345098 )
energy = 0.05
[connection signal="nether" from="StateMachine" to="." method="_on_StateMachine_nether"]
[connection signal="reality" from="StateMachine" to="." method="_on_StateMachine_reality"]
[connection signal="timeout" from="StateMachine/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StateMachine/Timer" to="StateMachine" method="_on_Timer_timeout"]
